# passim

./: .clang-format  README.md  RELEASE  SECURITY.md  meson.build  meson_options.txt
.github/workflows/: main.yml  scorecard.yml
.tx/: config
contrib/: passim.spec.in
contrib/ci/: Dockerfile-debian  Dockerfile-fedora  build-debian.sh
data/: meson.build  org.freedesktop.Passim.conf  org.freedesktop.Passim.metainfo.xml  org.freedesktop.Passim.service.in  passim.conf  passim.service.in  passim.sysusers.conf  style.css
libpassim/: generate-version-script.py  meson.build  passim-client.c  passim-client.h  passim-item.c  passim-item.h  passim-version.c  passim-version.h.in  passim.h  passim.map
po/: LINGUAS  POTFILES.in  cs.po  de.po  en_GB.po  fi.po  fr.po  ka.po  meson.build  nb_NO.po  passim.pot  ru.po  ta.po  tr.po
src/: meson.build  org.freedesktop.Passim.xml  passim-avahi-service-browser.c  passim-avahi-service-browser.h  passim-avahi-service-resolver.c  passim-avahi-service-resolver.h  passim-avahi-service.c  passim-avahi-service.h  passim-avahi.c  passim-avahi.h  passim-cli.c  passim-common.c  passim-common.h  passim-gnutls.c  passim-gnutls.h  passim-item.c  passim-item.h  passim-self-test.c  passim-server.c  passim.1
